--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -5,16 +5,16 @@ on:
     branches:
     - main
     paths:
-    - exercises/**
+    - project/**
 
 jobs:
   run-test:
     runs-on: ubuntu-latest
     steps:
-#    - name: Checkout
-#      uses: actions/checkout@v3
-#      with:
-#        path: main
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+        path: main
 #
 #    - name: Checkout exercise feedback
 #      uses: actions/checkout@v3
@@ -36,4 +36,6 @@ jobs:
     # Run tests
     - name: Run Test
       run: |
-        ./project/tests.sh
+        cd main
+        chmod +x project/tests.sh
+        project/tests.sh
