Submit Project 6: report (Attempt 1-check.ipynb)

--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -44,5 +44,7 @@ jobs:
     - name: Run Test
       run: |
         cd main/project
+        ls -l 
+        pwd
         chmod +x tests.sh
         ./tests.sh
